[package]
name = "funicular"
version = "0.1.0"
authors = ["Vincent Serpoul <vincent@serpoul.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_yaml = "0.8"
semver = { version = "0.10.0", features = ["serde"] }
sshkeys = { version = "0.3", features = ["serde"] }
serde_derive = "1.0"
thiserror = "1"
anyhow = "1"